Fixes spacing under iframe

--- a/themes/influencer-hugo/assets/scss/templates/_blog.scss
+++ b/themes/influencer-hugo/assets/scss/templates/_blog.scss
@@ -1,6 +1,6 @@
 .single-blog-item {
 	iframe {
-		margin-bottom: 1.5rem;
+		padding-bottom: 1.5rem;
 	}
 }
 
